[gd_scene load_steps=3 format=3 uid="uid://61n5pjlc6g2h"]

[ext_resource type="Script" path="res://main.gd" id="1_7ifj4"]
[ext_resource type="Texture2D" uid="uid://cpflpqtx6s0gw" path="res://icon.svg" id="2_77m5b"]

[node name="Main" type="Node2D"]
position = Vector2(552, 341)
script = ExtResource("1_7ifj4")

[node name="laika_health" type="Node2D" parent="."]

[node name="Laika" type="Sprite2D" parent="laika_health"]
position = Vector2(0, -3)
texture = ExtResource("2_77m5b")

[node name="alien_health" type="Node2D" parent="."]
position = Vector2(-416, 30)
scale = Vector2(4.75232, 4.70093)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="CanvasLayer"]
offset_left = 490.0
offset_top = 217.0
offset_right = 613.0
offset_bottom = 269.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="CanvasLayer"]
offset_left = 458.0
offset_top = 187.0
offset_right = 643.0
offset_bottom = 214.0
text = "Health: 20
"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="TextureProgressBar" type="TextureProgressBar" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0
